# server/osolot_server/api/__init__.py
@@ -3,6 +3,7 @@ from ninja import NinjaAPI
 from .auth import auth_router
 from .collective_memberships import collective_memberships_router
 from .collectives import collectives_router
+from .posts import posts_router
 from .users import users_router
 
 api = NinjaAPI(
@@ -16,5 +17,6 @@ api.add_router("/auth", auth_router)
 api.add_router("/users", users_router)
 api.add_router("/collectives", collectives_router)
 api.add_router("/collectives", collective_memberships_router)
+api.add_router("/posts", posts_router)
 
 __all__ = ["api"]
